syntax = "proto3";
option java_package= "com.viagra.chapter08.protobuf";
option java_outer_classname= "SubscribeReqProto";

message SubcribeReq {
     int32 subReqID = 1;
     string userName = 2;
     string productName = 3;
     repeated string address = 4;
}