syntax = "proto3";
option java_package= "com.viagra.chapter08.protobuf";
option java_outer_classname= "SubscribeRespProto";

message SubcribeResp {
    int32 subReqID = 1;
    int32 respCode = 2;
    string desc = 3;
}